# diary

./: AGENTS.md  CLAUDE.md  complete-diary.md  generate_app.py  index.html  places.json  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: deploy.yml
data/: timeline.json  unit_history.json
scripts/: fetch_event_data.py  research_events.py
tests/: conftest.py  test_chronology.py  test_data_validation.py  test_historical_events.py  test_references.py
