[project]
name = "diary"
version = "0.1.0"
description = "Interactive map of Edgar Hopkins' WW2 diary"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
